log
Sat Apr  9 18:15:19 UTC 2022: 
 hashmap.c | 98 ++++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 85 insertions(+), 13 deletions(-)
 tests:  0|0
92e06cb
Sat Apr  9 18:22:54 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7f3b28e
Sat Apr  9 18:28:39 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:95:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(searchMap(map,key));
   ^~
hashmap.c:96:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   {
   ^
cc1: all warnings being treated as errors
Compilation failed
6bcabd9
Sat Apr  9 18:28:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e50522d
Sat Apr  9 18:30:50 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce466b5
Sat Apr  9 18:32:46 UTC 2022: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
da96338
Sat Apr  9 18:33:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9e9e682
Sat Apr  9 18:35:03 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘firstMap’:
hashmap.c:137:5: error: ‘mmap’ undeclared (first use in this function); did you mean ‘map’?
     mmap->current += 1;
     ^~~~
     map
hashmap.c:137:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e8a0a4f
Sat Apr  9 18:35:12 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4ee67c4
Sat Apr  9 18:35:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c29b6d2
Sat Apr  9 18:40:15 UTC 2022: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
2d3cd2f
Sat Apr  9 18:41:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5bc128a
Sat Apr  9 18:42:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3f5290
Sat Apr  9 18:42:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f491e3
Sat Apr  9 18:42:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f83a7a
Sat Apr  9 18:43:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bd926a
Sat Apr  9 18:45:05 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
5a4e986
Sat Apr  9 18:45:23 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0a72583
Sat Apr  9 18:45:59 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8508f45
Sat Apr  9 18:50:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7a5952
Sat Apr  9 18:51:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c970827
Sat Apr  9 19:06:39 UTC 2022: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:86:3: error: statement with no effect [-Werror=unused-value]
   for(cont; cont < map->capacity; cont++)
   ^~~
hashmap.c:91:3: error: statement with no effect [-Werror=unused-value]
   for(cont; cont < map->capacity; cont++)
   ^~~
cc1: all warnings being treated as errors
Compilation failed
b6c99d1
Sat Apr  9 19:06:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:86:3: error: statement with no effect [-Werror=unused-value]
   for(cont; cont < map->capacity; cont++)
   ^~~
cc1: all warnings being treated as errors
Compilation failed
68941c0
Sat Apr  9 19:07:09 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
32e5a86
Sat Apr  9 19:17:56 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
9bd9155
Sat Apr  9 19:18:31 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3a7ba2f
Sat Apr  9 19:19:10 UTC 2022: 
 hashmap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  16|1
total_score: 60/70
89264a7
Sat Apr  9 19:20:55 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
3fec6f9
Sat Apr  9 19:38:45 UTC 2022: 
 hashmap.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  0|0
33841ee
Sat Apr  9 20:11:10 UTC 2022: 
 hashmap.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:67:3: error: ‘tamano’ undeclared (first use in this function); did you mean ‘tamanio’?
   tamano = map->capacity;
   ^~~~~~
   tamanio
hashmap.c:67:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
12c955c
Sat Apr  9 20:11:19 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6158ee4
Sat Apr  9 20:16:15 UTC 2022: 
 hashmap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:83:3: error: statement with no effect [-Werror=unused-value]
   tamanio map->capacity;
   ^~~~~~~
hashmap.c:83:11: error: expected ‘;’ before ‘map’
   tamanio map->capacity;
           ^~~
cc1: all warnings being treated as errors
Compilation failed
6fe42cd
Sat Apr  9 20:16:53 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b454110
Sat Apr  9 20:26:37 UTC 2022: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:74:14: error: ‘*auxiliar’ is a pointer; did you mean to use ‘->’?
   if(auxiliar->buckets[cont] != NULL)
              ^~
              ->
hashmap.c:74:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(auxiliar->buckets[cont] != NULL)
   ^~
hashmap.c:76:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     cont++;
     ^~~~
hashmap.c:115:3: error: "/*" within comment [-Werror=comment]
   /*long idx = hash(key, map->capacity );
    
cc1: all warnings being treated as errors
Compilation failed
18f0328
Sat Apr  9 20:28:41 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:114:3: error: "/*" within comment [-Werror=comment]
   /*long idx = hash(key, map->capacity );
    
cc1: all warnings being treated as errors
Compilation failed
f00bd78
Sat Apr  9 20:29:10 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘enlarge’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5bef8c2
